<resources>

    <string name="app_name">Let There Be Life</string>

    <!-- New Plant Activity/Fragment -->
    <string name="new_plant_title">Create a New Plant</string>
    <string name="plant_name">Plant Name:</string>
    <string name="new_plant_instructions">Please fill out to create your new plant.</string>

    <!-- Plant List -->
    <string name="no_internet_connection">Currently unable to connect to the server. Please try again later.</string>
    <string name="no_plant">There are no plants to display. Please create a new plant.</string>

    <!-- Plant Details Activity/Fragment -->
    <string name="plant_details_title">About %1$s</string>
    <string name="share_plant_details">Let There Be Life - Plant Details:\nPlant Name: %1$s\nSeed Date: %2$s\nDescription: %3$s</string>

    <!-- Plant Details/Information -->
    <string name="description">Description:</string>
    <string name="seed_date">Seed Date:</string>
    <string name="optimal_sun">Optimal Sun:</string>
    <string name="other_care">Other Care:</string>
    <string name="diseases">Diseases:</string>
    <string name="harvesting">Harvesting:</string>
    <string name="storage_use">Storage Use:</string>
    <string name="from_seed">From Seed:</string>
    <string name="consider">Consider:</string>

    <string name="plant_image_content_description">Plant Image</string>
    <string name="floating_action_button">floating action button</string>

    <!-- Errors -->
    <string name="error_title">Error</string>
    <string name="error_message">There has been an issue with your request, please try again later.</string>
    <string name="unable_to_load_content">Unable to load content, please try again.</string>
    <string name="widget_error_message">Sorry, no plants have been loaded.</string>
    <string name="min_characters_required">Minimum of 3 characters required</string>

    <!-- Menu -->
    <string name="about_plant">About Plant</string>
    <string name="save">SAVE</string>
    <string name="plant_list">Plant List:</string>
    <string name="refresh">Refresh</string>

</resources>
