<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.design.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.AppBarLayout
                android:id="@+id/plant_details_app_bar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                >

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/plant_details_collapsing_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="@color/colorPrimary"
                    app:expandedTitleMarginStart="16dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                    >

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <ImageView
                            android:id="@+id/plant_details_photo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/plant_image_content_description"
                            app:layout_collapseMode="parallax"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:foreground="@drawable/photo_scrim"
                            />

                    </FrameLayout>

                    <!--suppress AndroidDomInspection -->
                    <android.support.v7.widget.Toolbar
                        android:id="@+id/plant_details_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        />

                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                >

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/plant_details_constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/plant_details_seed_date_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/seed_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/plant_details_constraintLayout"/>

                    <TextView
                        android:id="@+id/plant_details_seed_date_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="Plant start date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plant_details_seed_date_label"/>

                    <TextView
                        android:id="@+id/plant_details_description_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plant_details_seed_date_textView"/>

                    <TextView
                        android:id="@+id/plant_details_description_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        tools:text="Plant description here."
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plant_details_description_label"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v4.widget.NestedScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/share_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:translationZ="6dp"
                app:layout_anchor="@id/plant_details_app_bar"
                app:layout_anchorGravity="bottom|end"
                app:srcCompat="@drawable/icon_share"
                />

        </android.support.design.widget.CoordinatorLayout>

        <FrameLayout
            android:id="@+id/plant_details_progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:visibility="gone"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                />

        </FrameLayout>

    </FrameLayout>

</layout>
