<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/new_plant_app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:elevation="@dimen/padding_standard_quarter"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/new_plant_collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?colorPrimary"
                app:expandedTitleMarginStart="@dimen/padding_standard"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/new_plant_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="Plant photo"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foreground="@drawable/photo_scrim"
                        />

                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/new_plant_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/new_plant_constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/new_plant_instructions"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_standard"
                    android:layout_marginStart="@dimen/padding_standard"
                    android:layout_marginTop="@dimen/padding_standard"
                    android:text="Please fill out to create your new plant."
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/new_plant_constraintLayout"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_plant_name_textInputLayout"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/HintTextAppearance"
                    app:layout_constraintEnd_toEndOf="@+id/new_plant_constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/new_plant_constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/new_plant_instructions"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_plant_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plant_name"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_plant_seed_date_textInputLayout"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_standard"
                    android:layout_marginStart="@dimen/padding_standard"
                    android:layout_marginTop="@dimen/padding_standard_half"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/HintTextAppearance"
                    app:layout_constraintEnd_toEndOf="@+id/new_plant_constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/new_plant_constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/new_plant_name_textInputLayout"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_plant_seed_date_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/seed_date"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_plant_description_textInputLayout"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_standard"
                    android:layout_marginStart="@dimen/padding_standard"
                    android:layout_marginTop="@dimen/padding_standard_half"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/HintTextAppearance"
                    app:layout_constraintEnd_toEndOf="@+id/new_plant_constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/new_plant_constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/new_plant_seed_date_textInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_plant_description_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/new_plant_camera_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_standard"
            android:tint="#FFFFFFFF"
            android:translationZ="@dimen/padding_standard_half_minus_2"
            app:layout_anchor="@id/new_plant_app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/icon_camera"
            />

    </android.support.design.widget.CoordinatorLayout>

</layout>